--- a/index.css
+++ b/index.css
@@ -1,40 +1,50 @@
-/* #base-container {
-  background-color: blanchedalmond;
-  max-width: 480px;
+html,
+body {
+  font-family: Verdana, Calibri, "Trebuchet MS", sans-serif;
   width: 100%;
+  max-width: 100%;
+  /* width: 100vw; */
+  font-size: 18px;
+  color: black;
+  background-color: rgb(224, 227, 220);
+  margin: 0px;
+  overflow-x: hidden;
+}
+
+table {
+  width: 100%;
+  /* width: 100vw; */
+  padding: 18px;
+}
+
+.group-header {
+  padding-top: 18px;
+  text-align: left;
+  font-weight: bold;
+}
+
+.subgroup-header {
+  font-weight: normal;
+  text-align: right;
+  /* padding-right: 54px; */
+  padding-top: 2px;
+  /* padding-bottom: 3px; */
+  padding-right: 46px;
+}
+
+.subgroup-header > span {
+  border-bottom: 1px solid black;
+}
+
+/* .item {
+
 } */
 
-body {
-  /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-  font-family: Calibri, "Trebuchet MS", sans-serif;
-  font-size: 18px;
+.item-name {
+  text-align: right;
+  padding-right: 18px;
 }
 
-.group {
-  /* background-color: blanchedalmond; */
-  display: flex;
-  flex-direction: column;
-  padding: 6px;
-}
-
-.header {
-  /* color: darkolivegreen; */
-  padding-bottom: 2px;
-  /* font-weight: 600; */
-  /* letter-spacing: 1px; */
-  align-self: center;
-  border-bottom: 1px dotted black;
-}
-
-.item {
-  /* color: red; */
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-bottom: 2px;
-  border-bottom: 1px dotted black;
-}
-
-/* .name::after {
-  content: " ~ ";
+/* .item-price {
+  text-align: right;
 } */
