--- a/index.css
+++ b/index.css
@@ -10,25 +10,25 @@ body {
   background-color: rgb(214, 212, 196);
 }
 
-.header-container {
-  padding: 16px;
-  text-align: center;
-  font-size: 16px;
-}
-
 .title {
-  font-weight: bold;
-  text-decoration: underline;
-  display: inline-block;
-  transform: scale(1, 0.75);
-  -webkit-transform: scale(1, 0.75); /* Safari and Chrome */
-  -moz-transform: scale(1, 0.75); /* Firefox */
-  -ms-transform: scale(1, 0.75); /* IE 9+ */
-  -o-transform: scale(1, 0.75); /* Opera */
+  /* border-bottom: 1px dotted black; */
 }
 
-.emoticon {
-  font-size: 60px;
+.gif {
+  border-top: 1px dotted black;
+  border-bottom: 1px dotted black;
+}
+
+.gif > img {
+  margin: auto;
+  display: block;
+  width: 50%;
+  padding: 8px 0px;
+  /* transform: rotate(-10deg);
+  -webkit-transform: rotate(-10deg); 
+  -moz-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  -o-transform: rotate(-10deg); */
 }
 
 table {
@@ -39,44 +39,31 @@ table {
   border-spacing: 0px;
 }
 
-.group-header {
+.header {
   text-align: left;
   font-weight: bold;
-  display: flex;
-  justify-content: flex-start;
-  /* align-items: center; */
 }
 
-.group-header > span {
-  display: inline-block;
-  transform: scale(1, 0.8);
-  -webkit-transform: scale(1, 0.8); /* Safari and Chrome */
-  -moz-transform: scale(1, 0.8); /* Firefox */
-  -ms-transform: scale(1, 0.8); /* IE 9+ */
-  -o-transform: scale(1, 0.8); /* Opera */
+.header > span {
+  vertical-align: top;
 }
-.group-header > span:first-child {
+.title.header > span {
+  vertical-align: bottom;
+}
+.header > span:first-child {
   font-size: 16px;
 }
-.group-header > span:nth-child(3) {
+.header > span:nth-child(2) {
   font-size: 13px;
 }
-.group-header > span:nth-child(5) {
+.header > span:nth-child(3) {
   font-size: 10px;
 }
 
 .subgroup-header {
   font-weight: normal;
   text-align: right;
-  /* padding-top: 2px; */
 }
-
-.subgroup-header > span:first-child {
-  /* border-bottom: 1px solid black; */
-}
-
-/* .item {
-} */
 
 .item-name {
   text-align: right;
@@ -86,10 +73,19 @@ table {
   text-align: right;
 }
 
-.color-subcategory {
+.color-1 {
   color: #8d6d4f;
 }
 
-.color-price {
+.color-2 {
   color: rgb(160, 113, 44);
+}
+
+.squized {
+  display: inline-block;
+  transform: scale(1, 0.8);
+  -webkit-transform: scale(1, 0.8); /* Safari and Chrome */
+  -moz-transform: scale(1, 0.8); /* Firefox */
+  -ms-transform: scale(1, 0.8); /* IE 9+ */
+  -o-transform: scale(1, 0.8); /* Opera */
 }
